--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_162">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -17,10 +12,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-codec-1.9.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mail.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.6-bin.jar"/>
-	<classpathentry kind="lib" path="WebContent/assets/js/html5.js"/>
-	<classpathentry kind="lib" path="WebContent/assets/js/jquery-1.8.2.min.js"/>
-	<classpathentry kind="lib" path="WebContent/assets/js/scripts.js"/>
-	<classpathentry kind="lib" path="WebContent/assets/js/supersized-init.js"/>
-	<classpathentry kind="lib" path="WebContent/assets/js/supersized.3.2.7.min.js"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/luojie/Downloads/fastjson-1.2.47.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
