--- a/.classpath
+++ b/.classpath
@@ -15,7 +15,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.6-bin.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/c3p0-0.9.1.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mchange-commons-java-0.2.11.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/servlet-api.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/luojie/Downloads/fastjson-1.2.47.jar"/>
+	<classpathentry kind="lib" path="D:/jar package/fastjson-1.2.47.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
